@startuml Database_Schema_RLS

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>PK: x</b>
!define foreign_key(x) <i>FK: x</i>
!define unique(x) <u>x</u>

skinparam linetype ortho
skinparam backgroundColor #FEFEFE

title Esquema de Banco de Dados Multi-Tenant com RLS

package "Core Multi-Tenant" {
    class tenants {
        primary_key(id) : SERIAL
        --
        unique(slug) : VARCHAR(100)
        name : VARCHAR(255)
        subdomain : VARCHAR(100)
        is_active : BOOLEAN
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
        --
        **RLS:** Sem política
        (gerenciado por super_admin)
    }

    class users {
        primary_key(id) : SERIAL
        --
        foreign_key(tenant_id) : INTEGER
        unique(email) : VARCHAR(255)
        password_hash : VARCHAR(255)
        full_name : VARCHAR(255)
        role : VARCHAR(50)
        is_active : BOOLEAN
        last_login : TIMESTAMP
        created_at : TIMESTAMP
        --
        **RLS:** ✅ POLICY user_isolation
        WHERE tenant_id = current_setting('app.current_tenant_id')::INTEGER
    }

    class sessions {
        primary_key(id) : UUID
        --
        foreign_key(user_id) : INTEGER
        ip_address : INET
        user_agent : TEXT
        created_at : TIMESTAMP
        expires_at : TIMESTAMP
        --
        **RLS:** ✅ POLICY session_isolation
        WHERE user_id IN (SELECT id FROM users WHERE tenant_id = ...)
    }
}

package "Analytics Data" {
    class conversations_analytics {
        primary_key(id) : SERIAL
        --
        foreign_key(tenant_id) : INTEGER
        unique(conversation_id) : INTEGER
        display_id : INTEGER
        contact_name : VARCHAR
        contact_phone : VARCHAR
        status : VARCHAR(50)
        priority : INTEGER
        message_compiled : JSONB
        csat_rating : INTEGER
        first_response_time : INTEGER
        resolution_time : INTEGER
        has_human_intervention : BOOLEAN
        is_bot_resolved : BOOLEAN
        conversation_date : TIMESTAMP
        etl_inserted_at : TIMESTAMP
        etl_updated_at : TIMESTAMP
        --
        **Índices:** 16 índices (tenant_id, conversation_id, status, etc.)
        **RLS:** ✅ POLICY tenant_isolation
        WHERE tenant_id = current_setting('app.current_tenant_id')::INTEGER
        **TimescaleDB:** Hypertable particionada por conversation_date
    }

    class inbox_tenant_mapping {
        primary_key(id) : SERIAL
        --
        foreign_key(tenant_id) : INTEGER
        inbox_id : INTEGER
        inbox_name : VARCHAR(255)
        is_active : BOOLEAN
        created_at : TIMESTAMP
        --
        **RLS:** ✅ POLICY tenant_isolation
    }

    class gpt_analysis {
        primary_key(id) : SERIAL
        --
        foreign_key(tenant_id) : INTEGER
        foreign_key(conversation_id) : INTEGER
        analysis_type : VARCHAR(50)
        conversion_probability : DECIMAL(5,2)
        sentiment : VARCHAR(50)
        key_topics : JSONB
        analyzed_at : TIMESTAMP
        --
        **RLS:** ✅ POLICY tenant_isolation
    }
}

package "ETL Control" {
    class etl_control {
        primary_key(execution_id) : SERIAL
        --
        foreign_key(tenant_id) : INTEGER
        load_type : VARCHAR(50)
        triggered_by : VARCHAR(50)
        status : VARCHAR(50)
        rows_extracted : INTEGER
        rows_loaded : INTEGER
        watermark_start : TIMESTAMP
        watermark_end : TIMESTAMP
        started_at : TIMESTAMP
        ended_at : TIMESTAMP
        error_message : TEXT
        --
        **RLS:** ✅ POLICY tenant_isolation
    }
}

package "CRM Integration" {
    class conversas_crm_match_real {
        primary_key(id) : SERIAL
        --
        foreign_key(tenant_id) : INTEGER
        foreign_key(conversation_id) : INTEGER
        crm_contact_id : VARCHAR(255)
        phone_normalized : VARCHAR(20)
        match_date : TIMESTAMP
        conversion_confirmed : BOOLEAN
        --
        **RLS:** ✅ POLICY tenant_isolation
    }
}

' Relacionamentos
tenants "1" -- "0..*" users : "has"
tenants "1" -- "0..*" conversations_analytics : "owns"
tenants "1" -- "0..*" inbox_tenant_mapping : "maps"
tenants "1" -- "0..*" etl_control : "tracks"
tenants "1" -- "0..*" gpt_analysis : "analyzes"
tenants "1" -- "0..*" conversas_crm_match_real : "matches"

users "1" -- "0..*" sessions : "has"
users "1" -- "0..*" etl_control : "triggers"

conversations_analytics "1" -- "0..*" gpt_analysis : "analyzed_by"
conversations_analytics "1" -- "0..1" conversas_crm_match_real : "matched_to"

inbox_tenant_mapping "1" -- "0..*" conversations_analytics : "filters"

note as RLSNote
  **Row-Level Security (RLS)**

  Todas as tabelas multi-tenant têm políticas RLS que filtram automaticamente
  os dados baseado em: app.current_tenant_id e app.current_user_id

  Configurado via middleware antes de cada query:
  SET LOCAL app.current_tenant_id = <tenant_id>;
  SET LOCAL app.current_user_id = <user_id>;

  Super admins (tenant_id = 0) podem acessar todos os dados.
end note

note as TimescaleNote
  **TimescaleDB**

  conversations_analytics é uma hypertable particionada
  por conversation_date para otimizar queries temporais
  e gerenciar retenção de dados.
end note

@enduml
